--- a/css/style.css
+++ b/css/style.css
@@ -216,19 +216,16 @@ a {
     position: relative;
     border-radius: 50%;
     margin: 0 auto 30px auto; }
-    .site-service-item .icon span {
-      font-size: 40px;
-      color: #080b0e;
-      position: absolute;
-      -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      left: 50%;
-      top: 50%; }
+   
   .site-service-item h3 {
     font-size: 20px;
     font-weight: 200; }
 
+    .site-service-item i{
+      margin-top: 25px;
+      
+    }
+ 
 .site-link {
   position: relative; }
   .site-link i {
